# satelite_communication

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  redis.py  redis_broker.py  requirement.txt  requirements.txt
.github/workflows/: install-deps.yml  quality.yml  tests.yml
client/: Dockerfile  client.py  dockerfile  requirements.txt
modem/: Dockerfile
pipeline/: redis.py
scripts/: test_stack.py  validate_stack.py
src/client/: Dockerfile  client.py  send_command.py
src/modem/: Dockerfile  modem.py
tests/: conftest.py  test_client.py  test_modem_api.py  test_stack.py
var/: os_variables.mk
