[project]
name = "satellite-communication-stack"
version = "0.1.0"
description = "Modem communication stack with telemetry, telecommands and metrics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi>=0.109.1",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.4",
    "redis>=4.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
