[project]
name = "satellite-communication-stack"
version = "0.1.0"
description = "Modem communication stack with telemetry, telecommands and metrics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi>=0.109.1",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.4",
    "redis>=4.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.4",
    "redis>=4.5.0",
    "aiohttp>=3.11.16",
    "uv>=0.6.14",
 ]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "docker>=7.1.0",
    "pytest-docker>=3.2.1",
    "black>=25.1.0",
    "bandit>=1.8.3",
    "isort>=6.0.1",
    "ruff>=0.11.4",
    "mypy>=1.15.0"
]

[tool.ruff.lint]
ignore = ["E501"]